--- a/part7/README
+++ b/part7/README
@@ -1,2 +1,4 @@
 To run this game:
 1. download all the files in this folder
+2. Run the file "ADarkMoon_Implementaion_Iteration1_main.html" in your default bowser
+3. Enjoy!
