--- a/Artifacts/README
+++ b/Artifacts/README
@@ -1,1 +1,2 @@
-Artifacts for part 1-3 are found in the Profiles/Meeting Logs Document
+Artifacts for parts 1-3 are found in the Profiles/Meeting Logs Document
+That is also where the updated meeting logs are located
