--- a/part7/README
+++ b/part7/README
@@ -1,4 +1,4 @@
 To run this game:
-1. download all the files in this folder
+1. download all the files in this folder, make sure they are all located within the same folder
 2. Run the file "ADarkMoon_Implementaion_Iteration1_main.html" in your default bowser
 3. Enjoy!
